WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98189
[CSS Exclusions] Block children have incorrect offset when shape-inside element lays out below other elements
https://bugs.webkit.org/show_bug.cgi?id=98189
Summary
[CSS Exclusions] Block children have incorrect offset when shape-inside eleme...
Bear Travis
Reported
2012-10-02 12:20:38 PDT
Created
attachment 166731
[details]
Page displaying the incorrect behavior When two divs are present with the same shape inside, the last does not display its content inside the shape-inside content area.
Attachments
Page displaying the incorrect behavior
(6.32 KB, text/html)
2012-10-02 12:20 PDT
,
Bear Travis
no flags
Details
Initial Patch
(9.14 KB, patch)
2012-10-24 15:14 PDT
,
Bear Travis
no flags
Details
Formatted Diff
Diff
Adding shape-inside flag for tests
(9.22 KB, patch)
2012-10-24 16:55 PDT
,
Bear Travis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Bear Travis
Comment 1
2012-10-24 13:42:11 PDT
Altering title to address the more general bug. This would most often occur when an element with shape-inside had <p> children, and was not the first element in the document. The partial fix for this bug leaves
bug 100284
in place, which will need to be fixed at a later date.
Bear Travis
Comment 2
2012-10-24 15:14:50 PDT
Created
attachment 170483
[details]
Initial Patch
Bear Travis
Comment 3
2012-10-24 16:55:11 PDT
Created
attachment 170516
[details]
Adding shape-inside flag for tests
Dirk Schulze
Comment 4
2012-10-26 12:33:24 PDT
Comment on
attachment 170516
[details]
Adding shape-inside flag for tests LGTM. r=me.
WebKit Review Bot
Comment 5
2012-10-26 12:58:08 PDT
Comment on
attachment 170516
[details]
Adding shape-inside flag for tests Clearing flags on attachment: 170516 Committed
r132685
: <
http://trac.webkit.org/changeset/132685
>
WebKit Review Bot
Comment 6
2012-10-26 12:58:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug