[CSS Exclusions] Block children have incorrect offset when shape-inside element lays out below other elements https://bugs.webkit.org/show_bug.cgi?id=98189

Patch by Bear Travis <betravis@adobe.com> on 2012-10-26
Reviewed by Dirk Schulze.

Source/WebCore:

The initial code assumed that each block created a new layout state, such that
LayoutState::layoutOffset would be specific to each block child of a shape-inside.
Typically, however, block children of a shape-inside do not create a new layout state,
and therefore we use the current element's offset instead.

Test: fast/exclusions/shape-inside/shape-inside-subsequent-blocks.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::layoutRunsAndFloatsInRange): Modified to use only logicalTop
rather than LayoutState::layoutOffset::width/height and logicalTop.

LayoutTests:

Test that block content in subsequent shape-insides lays out correctly. Introducing a script
that can eventually be used to simplify the rectangle cases.

* fast/exclusions/resources/simple-rectangle.js: Added.
(createRectangleTest): Generate a shape-inside rectangle test using the given parameters.
(createRectangleTestResult): Generate a shape-inside rectangle expected result using
the given parameters.
* fast/exclusions/shape-inside/shape-inside-subsequent-blocks-expected.html: Added.
* fast/exclusions/shape-inside/shape-inside-subsequent-blocks.html: Added.

Canonical link: https://commits.webkit.org/118592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132685 268f45cc-cd09-0410-ab3c-d52691b4dbfc